@@ -4,6 +4,7 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
+import net.sf.marineapi.nmea.sentence.TalkerId;
 import net.sf.marineapi.nmea.util.CompassPoint;
 import net.sf.marineapi.nmea.util.DataStatus;
 import net.sf.marineapi.nmea.util.Date;
@@ -30,7 +31,7 @@ public class RMCTest {
     @Before
     public void setUp() {
         try {
-            empty = new RMCParser(EXAMPLE);
+            empty = new RMCParser(TalkerId.GP);
             rmc = new RMCParser(EXAMPLE);
         } catch (Exception e) {
             fail(e.getMessage());
